--- a/Youtube.css
+++ b/Youtube.css
@@ -77,6 +77,7 @@ body{
     max-width: 700px;
     display: flex;
     align-items: center;
+
 }
 .right-section{
     width: 250px;
@@ -90,6 +91,13 @@ body{
 }
 .noted{
     position: relative;
+    opacity: 1;
+    display: flex;
+    justify-content: center;
+}
+.noted:hover .tooltip{
+    position: absolute;
+    opacity: 2;
 }
 .notifications{
     background-color: rgb(172, 28, 28);
@@ -153,18 +161,37 @@ body{
     border-radius: 50%;
     margin-right: 10px;  
     position: relative;
+    display: flex;
+    justify-content: center;
 }
 .mic-button:hover .tooltip{
     opacity: 1;
     width: 150px;
 }
 
-.create-buttun{
+.create-button{
     position: relative;
+    opacity: 1;
 
 }
-.create-buttun:hover .tooltip{
+.create-button:hover .tooltip{
+    position: absolute;
+    opacity: 2;
+    
+}
+
+.youtube-button{
+    position: relative;
     opacity: 1;
+    display: flex;
+    justify-content: center;
+
+}
+.youtube-button:hover .tooltip{
+    position: absolute;
+    opacity: 2;
+    width: 85px;
+    
 }
 .micicon{
     height: 30px;
@@ -186,7 +213,18 @@ margin-top: 3px;
 .head{
     width: 100%;
     position: relative;
+    column-gap: 10px;
 }
+
+.grid-template{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    row-gap: 40px;
+    column-gap: 20px;
+  
+  }
+
+
 .video-time{
     background-color: black;
     color:white;
@@ -200,12 +238,25 @@ margin-top: 3px;
     right: 20px;
 }
 
-.grid-template{
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr;
-  row-gap: 40px;
-
+@media (max-width: 750px) {
+    .grid-template{
+  grid-template-columns: 1fr 1fr;
+    }
 }
+@media (min-width: 751px) and (max-width: 999px){
+    .grid-template{
+        grid-template-columns: 1fr 1fr 1fr;
+}
+}
+
+@media (min-width: 1000px) {
+    .grid-template{
+        grid-template-columns: 1fr 1fr 1fr 1fr;
+    }
+}
+
+
+
 .nested1{
     display: inline-block;
     width: 50px;
